src/style.css
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  margin: 0;
  align-items: center;
}

header {
  background-image: url(./images/pattern-bg-desktop.png);
  background-size: cover;
  align-self: stretch;
  padding: 0px;
  margin: 0;
  text-align: center;
  font-size: 35px;
  color: white;
  min-height: 280px;
  position: relative;
  z-index: 1000;
}

header h5 {
  margin-bottom: 40px;
}

header form {
  width: 50%;
  margin: 0 auto;
  display: flex;
  border-radius: 0 25px 25px 0;
}

input[type="text"] {
  width: 100%;
  padding: 16px;
  font-size: 12px;
  border: 1px solid #ccc;
  border-radius: 15px 0 0 15px;
  box-sizing: border-box;
}

.submitBtn {
  border-radius: 0 15px 15px 0;
  background-color: #333;
  border: none;
  padding: 8px 16px;
  cursor: pointer;
}

.submitBtn img {
  width: 12px;
}

.info_container {
  background: rgb(255, 255, 255);
  display: flex;
  position: absolute;
  justify-content: space-evenly;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  z-index: 1000;
  flex-direction: row;
  gap: 3rem;
  border-radius: 13px;
  box-shadow: 0 4px 12px rgb(0, 0, 0, 1);
  width: 60%;
  padding: 24px 32px;
}

.info_container h6 {
  color: hsl(0, 0%, 58%);
  font-weight: 400;
  align-items: center;
}

.info_container div {
  border-right: 1px solid hsl(0, 0%, 80%);
  padding-right: 2rem;
  align-items: center;
}

.info_container div:last-child {
  border-right: none;
  height: 50px;
}

.map_section {
  position: relative;
  width: 100%;
}

#map {
  height: calc(100vh - 280px);
  width: 100%;
  overflow: visible;
}

